coding window section

--- a/public/src/input.css
+++ b/public/src/input.css
@@ -13,7 +13,7 @@
 
 @theme{
 
-    --color-primary:;
+    --color-primary:#3B82F6;
 
     --color-surface-100:#fafafa;
     --color-surface-200:#f8f8f8;
