--- a/public/src/input.css
+++ b/public/src/input.css
@@ -59,3 +59,10 @@
     visibility: hidden;
     opacity: 0;
 }
+
+.custom-shadow{
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
+}
+.dark .custom-shadow{
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 1);
+}
