--- a/public/style/app.css
+++ b/public/style/app.css
@@ -6,7 +6,12 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-rose-500: oklch(0.645 0.246 16.439);
     --spacing: 0.25rem;
+    --text-xs: 0.75rem;
+    --text-xs--line-height: calc(1 / 0.75);
+    --text-sm: 0.875rem;
+    --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
     --text-base--line-height: calc(1.5 / 1);
     --text-lg: 1.125rem;
@@ -22,8 +27,10 @@
     --font-weight-bold: 700;
     --tracking-widest: 0.1em;
     --radius-xs: 0.125rem;
+    --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --radius-3xl: 1.5rem;
+    --radius-4xl: 2rem;
     --animate-pulse: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
     --blur-xs: 4px;
     --default-transition-duration: 150ms;
@@ -40,7 +47,10 @@
     --default-mono-font-variation-settings: var(
       --font-mono--font-variation-settings
     );
+    --font-ltr: "poppins","yekanBakh";
+    --font-rtl: "yekanBakh","poppins";
     --color-primary: #3B82F6;
+    --color-surface-300: #f3f3f3;
     --color-surface-400: #e3e3e3;
     --color-surface-500: #cdcdcd;
     --color-darksurface-400: #3f3f3f;
@@ -49,6 +59,8 @@
     --color-darkBackground: #121212;
     --color-textColor: #292524;
     --color-darkTextColor: #ECDFCC;
+    --color-thinTextColor: #57534e;
+    --color-darkThinTextColor: #a8a29e;
     --font-yekanbakh: yekanBakh;
   }
 }
@@ -282,6 +294,9 @@
   .hidden {
     display: none;
   }
+  .table {
+    display: table;
+  }
   .size-6 {
     width: calc(var(--spacing) * 6);
     height: calc(var(--spacing) * 6);
@@ -291,6 +306,12 @@
   }
   .h-6 {
     height: calc(var(--spacing) * 6);
+  }
+  .h-7 {
+    height: calc(var(--spacing) * 7);
+  }
+  .h-8 {
+    height: calc(var(--spacing) * 8);
   }
   .h-12 {
     height: calc(var(--spacing) * 12);
@@ -307,8 +328,14 @@
   .w-1 {
     width: calc(var(--spacing) * 1);
   }
+  .w-4 {
+    width: calc(var(--spacing) * 4);
+  }
   .w-6 {
     width: calc(var(--spacing) * 6);
+  }
+  .w-7 {
+    width: calc(var(--spacing) * 7);
   }
   .w-8 {
     width: calc(var(--spacing) * 8);
@@ -325,6 +352,21 @@
   .w-26 {
     width: calc(var(--spacing) * 26);
   }
+  .w-full {
+    width: 100%;
+  }
+  .w-max {
+    width: max-content;
+  }
+  .max-w-2 {
+    max-width: calc(var(--spacing) * 2);
+  }
+  .max-w-2\.5 {
+    max-width: calc(var(--spacing) * 2.5);
+  }
+  .max-w-25 {
+    max-width: calc(var(--spacing) * 25);
+  }
   .max-w-52 {
     max-width: calc(var(--spacing) * 52);
   }
@@ -334,14 +376,23 @@
   .max-w-150 {
     max-width: calc(var(--spacing) * 150);
   }
+  .max-w-225 {
+    max-width: calc(var(--spacing) * 225);
+  }
   .min-w-full {
     min-width: 100%;
+  }
+  .border-collapse {
+    border-collapse: collapse;
   }
   .rotate-180 {
     rotate: 180deg;
   }
   .cursor-pointer {
     cursor: pointer;
+  }
+  .resize {
+    resize: both;
   }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -367,6 +418,9 @@
   .gap-1 {
     gap: calc(var(--spacing) * 1);
   }
+  .gap-1\.5 {
+    gap: calc(var(--spacing) * 1.5);
+  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
@@ -378,6 +432,12 @@
   }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
+  }
+  .gap-12 {
+    gap: calc(var(--spacing) * 12);
+  }
+  .gap-20 {
+    gap: calc(var(--spacing) * 20);
   }
   .space-y-2 {
     :where(& > :not(:last-child)) {
@@ -415,6 +475,28 @@
   .rounded-xs {
     border-radius: var(--radius-xs);
   }
+  .rounded-b-md {
+    border-bottom-right-radius: var(--radius-md);
+    border-bottom-left-radius: var(--radius-md);
+  }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
+  .border-2 {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
+  }
+  .border-none {
+    --tw-border-style: none;
+    border-style: none;
+  }
+  .border-primary {
+    border-color: var(--color-primary);
+  }
+  .border-rose-500 {
+    border-color: var(--color-rose-500);
+  }
   .bg-\[\#61a6fa99\] {
     background-color: #61a6fa99;
   }
@@ -424,8 +506,17 @@
   .bg-darkTextColor {
     background-color: var(--color-darkTextColor);
   }
+  .bg-darksurface-400 {
+    background-color: var(--color-darksurface-400);
+  }
   .bg-primary {
     background-color: var(--color-primary);
+  }
+  .bg-rose-500 {
+    background-color: var(--color-rose-500);
+  }
+  .bg-surface-300 {
+    background-color: var(--color-surface-300);
   }
   .bg-surface-400 {
     background-color: var(--color-surface-400);
@@ -435,6 +526,9 @@
   }
   .bg-surface-500\/30 {
     background-color: color-mix(in oklab, var(--color-surface-500) 30%, transparent);
+  }
+  .bg-textColor {
+    background-color: var(--color-textColor);
   }
   .bg-textColor\/80 {
     background-color: color-mix(in oklab, var(--color-textColor) 80%, transparent);
@@ -457,11 +551,26 @@
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
+  .p-3 {
+    padding: calc(var(--spacing) * 3);
+  }
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
+  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
+  }
+  .px-2\.5 {
+    padding-inline: calc(var(--spacing) * 2.5);
+  }
+  .px-3 {
+    padding-inline: calc(var(--spacing) * 3);
+  }
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
   }
   .px-4\.5 {
     padding-inline: calc(var(--spacing) * 4.5);
@@ -471,6 +580,12 @@
   }
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
+  }
+  .py-1 {
+    padding-block: calc(var(--spacing) * 1);
+  }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
@@ -511,22 +626,59 @@
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
   }
+  .text-sm {
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
+  }
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
+  }
+  .text-xs {
+    font-size: var(--text-xs);
+    line-height: var(--tw-leading, var(--text-xs--line-height));
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
   }
+  .text-nowrap {
+    text-wrap: nowrap;
+  }
+  .text-wrap {
+    text-wrap: wrap;
+  }
+  .break-words {
+    overflow-wrap: break-word;
+  }
   .text-darkTextColor {
     color: var(--color-darkTextColor);
+  }
+  .text-primary {
+    color: var(--color-primary);
+  }
+  .text-rose-500 {
+    color: var(--color-rose-500);
   }
   .text-textColor {
     color: var(--color-textColor);
   }
+  .text-thinTextColor {
+    color: var(--color-thinTextColor);
+  }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
   .backdrop-blur-xs {
     --tw-backdrop-blur: blur(var(--blur-xs));
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+  }
+  .backdrop-filter {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
@@ -543,6 +695,10 @@
   .duration-200 {
     --tw-duration: 200ms;
     transition-duration: 200ms;
+  }
+  .outline-none {
+    --tw-outline-style: none;
+    outline-style: none;
   }
   .select-none {
     -webkit-user-select: none;
@@ -573,6 +729,16 @@
       top: calc(var(--spacing) * 10);
     }
   }
+  .sm\:block {
+    @media (width >= 40rem) {
+      display: block;
+    }
+  }
+  .sm\:hidden {
+    @media (width >= 40rem) {
+      display: none;
+    }
+  }
   .sm\:w-full {
     @media (width >= 40rem) {
       width: 100%;
@@ -588,6 +754,16 @@
       gap: calc(var(--spacing) * 0);
     }
   }
+  .sm\:gap-6 {
+    @media (width >= 40rem) {
+      gap: calc(var(--spacing) * 6);
+    }
+  }
+  .sm\:px-3 {
+    @media (width >= 40rem) {
+      padding-inline: calc(var(--spacing) * 3);
+    }
+  }
   .sm\:text-2xl {
     @media (width >= 40rem) {
       font-size: var(--text-2xl);
@@ -598,6 +774,23 @@
     @media (width >= 40rem) {
       font-size: var(--text-4xl);
       line-height: var(--tw-leading, var(--text-4xl--line-height));
+    }
+  }
+  .sm\:text-lg {
+    @media (width >= 40rem) {
+      font-size: var(--text-lg);
+      line-height: var(--tw-leading, var(--text-lg--line-height));
+    }
+  }
+  .sm\:text-xl {
+    @media (width >= 40rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .sm\:text-inherit {
+    @media (width >= 40rem) {
+      color: inherit;
     }
   }
   .md\:h-4\/5 {
@@ -623,6 +816,11 @@
   .md\:flex-row {
     @media (width >= 48rem) {
       flex-direction: row;
+    }
+  }
+  .md\:gap-12 {
+    @media (width >= 48rem) {
+      gap: calc(var(--spacing) * 12);
     }
   }
   .md\:px-8 {
@@ -656,6 +854,11 @@
       grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
+  .lg\:gap-20 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 20);
+    }
+  }
   .lg\:px-10 {
     @media (width >= 64rem) {
       padding-inline: calc(var(--spacing) * 10);
@@ -666,10 +869,52 @@
       padding-block: calc(var(--spacing) * 4);
     }
   }
+  .ltr\:block {
+    &:where(:dir(ltr), [dir="ltr"], [dir="ltr"] *) {
+      display: block;
+    }
+  }
+  .ltr\:rounded-tl-md {
+    &:where(:dir(ltr), [dir="ltr"], [dir="ltr"] *) {
+      border-top-left-radius: var(--radius-md);
+    }
+  }
+  .ltr\:rounded-tr-4xl {
+    &:where(:dir(ltr), [dir="ltr"], [dir="ltr"] *) {
+      border-top-right-radius: var(--radius-4xl);
+    }
+  }
+  .ltr\:font-ltr {
+    &:where(:dir(ltr), [dir="ltr"], [dir="ltr"] *) {
+      font-family: var(--font-ltr);
+    }
+  }
   .ltr\:tracking-widest {
     &:where(:dir(ltr), [dir="ltr"], [dir="ltr"] *) {
       --tw-tracking: var(--tracking-widest);
       letter-spacing: var(--tracking-widest);
+    }
+  }
+  .ltr\:first\:rounded-tr-md {
+    &:where(:dir(ltr), [dir="ltr"], [dir="ltr"] *) {
+      &:first-child {
+        border-top-right-radius: var(--radius-md);
+      }
+    }
+  }
+  .rtl\:block {
+    &:where(:dir(rtl), [dir="rtl"], [dir="rtl"] *) {
+      display: block;
+    }
+  }
+  .rtl\:rounded-tl-4xl {
+    &:where(:dir(rtl), [dir="rtl"], [dir="rtl"] *) {
+      border-top-left-radius: var(--radius-4xl);
+    }
+  }
+  .rtl\:rounded-tr-md {
+    &:where(:dir(rtl), [dir="rtl"], [dir="rtl"] *) {
+      border-top-right-radius: var(--radius-md);
     }
   }
   .rtl\:from-primary {
@@ -682,6 +927,18 @@
     &:where(:dir(rtl), [dir="rtl"], [dir="rtl"] *) {
       --tw-gradient-to: #234C90;
       --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+    }
+  }
+  .rtl\:font-rtl {
+    &:where(:dir(rtl), [dir="rtl"], [dir="rtl"] *) {
+      font-family: var(--font-rtl);
+    }
+  }
+  .rtl\:first\:rounded-tl-md {
+    &:where(:dir(rtl), [dir="rtl"], [dir="rtl"] *) {
+      &:first-child {
+        border-top-left-radius: var(--radius-md);
+      }
     }
   }
   .dark\:block {
@@ -729,6 +986,16 @@
       color: var(--color-darkTextColor);
     }
   }
+  .dark\:text-darkThinTextColor {
+    &:where(.dark, .dark *) {
+      color: var(--color-darkThinTextColor);
+    }
+  }
+  .dark\:text-textColor {
+    &:where(.dark, .dark *) {
+      color: var(--color-textColor);
+    }
+  }
 }
 @font-face {
   font-family: yekanBakh;
@@ -737,6 +1004,10 @@
 @font-face {
   font-family: yekanBakhBold;
   src: url("./../fonts/YekanBakhFaNum-Bold.woff") format("woff");
+}
+@font-face {
+  font-family: poppins;
+  src: url("./../fonts/Poppins-Regular.woff") format("woff");
 }
 .hide {
   visibility: hidden;
@@ -755,6 +1026,11 @@
   syntax: "*";
   inherits: false;
   initial-value: 0;
+}
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
 }
 @property --tw-gradient-position {
   syntax: "*";
@@ -801,6 +1077,11 @@
 @property --tw-font-weight {
   syntax: "*";
   inherits: false;
+}
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
 }
 @property --tw-backdrop-blur {
   syntax: "*";
