--- a/public/style/app.css
+++ b/public/style/app.css
@@ -8,8 +8,6 @@
       "Courier New", monospace;
     --color-rose-500: oklch(0.645 0.246 16.439);
     --spacing: 0.25rem;
-    --text-xs: 0.75rem;
-    --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
@@ -61,7 +59,6 @@
     --color-darkTextColor: #ECDFCC;
     --color-thinTextColor: #57534e;
     --color-darkThinTextColor: #a8a29e;
-    --font-yekanbakh: yekanBakh;
   }
 }
 @layer base {
@@ -285,6 +282,9 @@
   .mb-1 {
     margin-bottom: calc(var(--spacing) * 1);
   }
+  .block {
+    display: block;
+  }
   .flex {
     display: flex;
   }
@@ -309,9 +309,6 @@
   }
   .h-7 {
     height: calc(var(--spacing) * 7);
-  }
-  .h-8 {
-    height: calc(var(--spacing) * 8);
   }
   .h-12 {
     height: calc(var(--spacing) * 12);
@@ -358,14 +355,8 @@
   .w-max {
     width: max-content;
   }
-  .max-w-2 {
-    max-width: calc(var(--spacing) * 2);
-  }
-  .max-w-2\.5 {
-    max-width: calc(var(--spacing) * 2.5);
-  }
-  .max-w-25 {
-    max-width: calc(var(--spacing) * 25);
+  .max-w-0 {
+    max-width: calc(var(--spacing) * 0);
   }
   .max-w-52 {
     max-width: calc(var(--spacing) * 52);
@@ -375,9 +366,6 @@
   }
   .max-w-150 {
     max-width: calc(var(--spacing) * 150);
-  }
-  .max-w-225 {
-    max-width: calc(var(--spacing) * 225);
   }
   .min-w-full {
     min-width: 100%;
@@ -402,6 +390,9 @@
   }
   .flex-col-reverse {
     flex-direction: column-reverse;
+  }
+  .flex-wrap {
+    flex-wrap: wrap;
   }
   .items-center {
     align-items: center;
@@ -433,12 +424,6 @@
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
-  .gap-12 {
-    gap: calc(var(--spacing) * 12);
-  }
-  .gap-20 {
-    gap: calc(var(--spacing) * 20);
-  }
   .space-y-2 {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 0;
@@ -465,6 +450,9 @@
   }
   .rounded-3xl {
     border-radius: var(--radius-3xl);
+  }
+  .rounded-4xl {
+    border-radius: var(--radius-4xl);
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
@@ -505,9 +493,6 @@
   }
   .bg-darkTextColor {
     background-color: var(--color-darkTextColor);
-  }
-  .bg-darksurface-400 {
-    background-color: var(--color-darksurface-400);
   }
   .bg-primary {
     background-color: var(--color-primary);
@@ -593,6 +578,9 @@
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
   }
+  .py-6 {
+    padding-block: calc(var(--spacing) * 6);
+  }
   .py-8 {
     padding-block: calc(var(--spacing) * 8);
   }
@@ -611,8 +599,12 @@
   .text-center {
     text-align: center;
   }
-  .font-yekanbakh {
-    font-family: var(--font-yekanbakh);
+  .font-ltr {
+    font-family: var(--font-ltr);
+  }
+  .text-2xl {
+    font-size: var(--text-2xl);
+    line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
   .text-3xl {
     font-size: var(--text-3xl);
@@ -633,10 +625,6 @@
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
-  }
-  .text-xs {
-    font-size: var(--text-xs);
-    line-height: var(--tw-leading, var(--text-xs--line-height));
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
@@ -744,9 +732,39 @@
       width: 100%;
     }
   }
+  .sm\:max-w-0 {
+    @media (width >= 40rem) {
+      max-width: calc(var(--spacing) * 0);
+    }
+  }
+  .sm\:max-w-3\/4 {
+    @media (width >= 40rem) {
+      max-width: calc(3/4 * 100%);
+    }
+  }
+  .sm\:max-w-8\/10 {
+    @media (width >= 40rem) {
+      max-width: calc(8/10 * 100%);
+    }
+  }
+  .sm\:max-w-34 {
+    @media (width >= 40rem) {
+      max-width: calc(var(--spacing) * 34);
+    }
+  }
+  .sm\:max-w-810 {
+    @media (width >= 40rem) {
+      max-width: calc(var(--spacing) * 810);
+    }
+  }
   .sm\:grid-cols-2 {
     @media (width >= 40rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .sm\:justify-between {
+    @media (width >= 40rem) {
+      justify-content: space-between;
     }
   }
   .sm\:gap-0 {
@@ -776,21 +794,10 @@
       line-height: var(--tw-leading, var(--text-4xl--line-height));
     }
   }
-  .sm\:text-lg {
-    @media (width >= 40rem) {
-      font-size: var(--text-lg);
-      line-height: var(--tw-leading, var(--text-lg--line-height));
-    }
-  }
   .sm\:text-xl {
     @media (width >= 40rem) {
       font-size: var(--text-xl);
       line-height: var(--tw-leading, var(--text-xl--line-height));
-    }
-  }
-  .sm\:text-inherit {
-    @media (width >= 40rem) {
-      color: inherit;
     }
   }
   .md\:h-4\/5 {
@@ -803,9 +810,19 @@
       height: calc(var(--spacing) * 16);
     }
   }
+  .md\:w-1\/2 {
+    @media (width >= 48rem) {
+      width: calc(1/2 * 100%);
+    }
+  }
   .md\:w-16 {
     @media (width >= 48rem) {
       width: calc(var(--spacing) * 16);
+    }
+  }
+  .md\:max-w-1\/2 {
+    @media (width >= 48rem) {
+      max-width: calc(1/2 * 100%);
     }
   }
   .md\:max-w-100 {
@@ -836,6 +853,12 @@
   .md\:text-start {
     @media (width >= 48rem) {
       text-align: start;
+    }
+  }
+  .md\:text-2xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
   .md\:text-3xl {
